# clibri

./: .gitignore  .gitmodules  README.md  TODO.md  rakefile.module.builder.rb  rakefile.module.env.rb  rakefile.rb
cli/: Cargo.toml  LICENSE  README.md
cli/src/: main.rs
cli/src/arguments/: args_option_embedded.rs  args_option_files.rs
cli/src/helpers/: fs.rs  mod.rs
cli/src/protocol/: enums.rs  groups.rs  parser.rs  store.rs  structs.rs  types.rs
cli/src/protocol/render/rust/: mod.rs
cli/src/protocol/render/rust/static/: protocol.storage.rs  protocol.uses.rs
cli/src/protocol/render/typescript/: mod.rs
cli/src/protocol/render/typescript/static/: index.ts  packing.header.ts  packing.middleware.ts  protocol.convertor.ts  protocol.injection.ts  protocol.primitives.array.i32.ts  protocol.primitives.array.u64.ts  protocol.primitives.i16.ts  protocol.sizes.ts  protocol.validator.ts
cli/src/workflow/: config.rs  parser.rs  request.rs  store.rs
cli/src/workflow/render/: render.rs
cli/src/workflow/render/consumer/rust/: render.rs  (+6 more)
cli/src/workflow/render/puml/: mod.rs  render_beacon.rs
cli/temp/: protocol.prot  protocol_binds.prot  protocol_binds_mapped.prot  protocol_binds_mapped.prot.backup  protocol_with_comments.prot
environment/producer/rust/: Cargo.toml
environment/producer/rust/producer/: Cargo.toml
environment/producer/rust/producer/src/: lib.backup.rs  lib.rs
environment/producer/rust/src/: main.backup.rs  main.rs
environment/transport/client/rust/: Cargo.toml
environment/transport/client/rust/src/: client.rs  errors.rs  events.rs  lib.rs  options.rs
environment/transport/server/rust/: Cargo.toml
environment/transport/server/rust-test/: Cargo.toml  run.sh
environment/transport/server/rust-test/src/: client.rs  config.rs  main.rs  stat.rs  test_1.rs  test_2.rs  test_3.rs  test_4.rs
environment/transport/server/rust/src/: connection.channel.rs  connection.handshake.rs  connection.rs  env.rs  errors.rs  lib.rs  options.rs  server copy.rs  server.rs  server.stat.rs
examples/consumer/rust/: Cargo.toml
examples/consumer/rust/src/: main.rs
examples/consumer/rust/src/consumer/: context.rs
examples/producer/rust/: Cargo.toml
examples/producer/rust/src/: main.rs
examples/producer/rust/src/producer/: mod.rs
lib-cli/tmp/client-rs/: Cargo.toml
lib-cli/tmp/client-rs/src/: main.rs
lib-cli/tmp/client-rs/src/consumer/: context.rs
lib-cli/tmp/server/: Cargo.toml
lib-cli/tmp/server/producer/: app.rs  producer.rs
lib-cli/tmp/server/producer/beacons/: events_message.rs  events_userdisconnected.rs  mod.rs
lib-cli/tmp/server/producer/broadcast/: broadcast.rs
lib-cli/tmp/server/producer/consumer/: consumer.rs  consumer_identification.rs
lib-cli/tmp/server/producer/events/: default_event_connected.rs  default_event_disconnected.rs  disconnected.rs  error.rs  event_connected.rs  event_disconnected.rs  mod.rs  serverevents_useralert.rs  serverevents_userkickoff.rs
lib-cli/tmp/server/producer/implementation/: mod.rs
lib-cli/tmp/server/producer/protocol/: protocol.rs
lib-cli/tmp/server/producer/responses/: userlogin_request.rs
lib-cli/tmp/server/src/: main.rs
lib-cli/tmp/server/src/producer/: context.rs
lib-test/: Cargo.toml
lib-test/config/: log4rs.yaml
lib-test/src/: main.protocol.handshake.rs  main.protocol.ping.rs  main.protocol.pingout.rs  main.protocol.rs  main.rs
lib/rust/: Cargo.toml
lib/rust/src/: lib.rs
lib/rust/src/env/: logs.rs  mod.rs  vars.rs
lib/rust/src/tools/: logger.rs
lib/rust/src/transport/client/: mod.rs
lib/rust/src/transport/server/: control.rs  errors.rs  events.rs  index.rs  interface.rs  mod.rs  server.rs
producer/rust/: Cargo.toml
producer/rust/producer/: Cargo.toml
producer/rust/producer/src/: lib.rs
producer/rust/producer/src/consumer/: consumer.rs
producer/rust/producer/src/declarations/: observer.UserJoinRequest.rs  observer.UserSignInRequest.rs  observer.UserSingInRequest.rs  observer.event.UserConnected.rs
producer/rust/producer/src/implementations/: observer.UserJoinRequest.rs  observer.UserSingInRequest.rs  observer.event.UserConnected.rs
producer/rust/producer/src/protocol/: protocol.rs
producer/rust/producer/src/traits/: observer.rs
producer/rust/producermacro/: Cargo.toml
producer/rust/producermacro/src/: lib.rs
producer/rust/src/: buffer.rs  consumer.rs  context.rs  event.observer.rs  events.holder.rs  lib.backup.rs  lib.rs  main.rs  observer.broadcast.rs  observer.request.rs  request.observer.rs
producer/rust/src/cbs/: broadcast.rs  consumer.rs  context.rs  events.holder.rs  lib.future.rs  lib.rs  observer.broadcast.rs  observer.event.rs  observer.request.rs  protocol.rs
producer/rust/src/consumer/: consumer.context.rs  consumer.identification.rs  consumer.rs
producer/rust/src/declarations/: observer.UserJoinRequest.rs  observer.UserSingInRequest.rs  observer.event.UserConnected.rs
producer/rust/src/implementations/: observer.UserJoinRequest.rs  observer.UserSingInRequest.rs  observer.event.UserConnected.rs
producer/rust/src/producer/: lib.rs
producer/rust/src/producer/consumer/: consumer.rs
producer/rust/src/producer/implementations/: observer.UserJoinRequest.rs  observer.UserSingInRequest.rs  observer.event.UserConnected.rs
producer/rust/src/producer/protocol/: protocol.rs
producer/rust/src/producer/traits/: logger.rs
producer/rust/src/protocol/: protocol.rs
producer/rust/src/traits/: observer.rs
tests/workflow/consumer/rust/: Cargo.toml
tests/workflow/consumer/rust/src/: connection.rs  main.rs  stat.rs
tests/workflow/producer/rust/: Cargo.toml
tests/workflow/producer/rust/src/: main.rs  stat.rs
transport/server/rust/: Cargo.toml
transport/server/rust/src/: lib.rs
transport/server/rust/src copy/connection/: connection.context.rs
transport/server/rust/src copy/server/: server.callbacks.bu  server.rs
transport/server/rust/src/connection/: connection.channel.rs  connection.context.rs  connection.rs
transport/server/rust/src/controller/: controller.rs
transport/server/rust/src/server/: server.rs
(+1350 files in other folders)
