[package]
authors = ["dmitry.astafyev <dmitry.astafyev@esrlabs.com>"]
edition = "2018"
name = "clibri"
version = "0.1.0"
description = "clibri generator CLI"
repository = "https://github.com/DmitryAstafyev/clibri"
license = "Apache-2.0"
license-file = "LICENSE"
homepage = "https://github.com/DmitryAstafyev/clibri"
readme = "README.md"
keywords = ["websocket", "clibri", "protocol"]
categories = ["network-programming"]

[dependencies]
bytes = "1.1.0"
regex = "1.5.4"
ring = "0.16.20"
data-encoding = "2.3.2"
toml = "0.5.8"
serde_json = "1.0"