[package]
name = "fiber"
version = "0.1.0"
authors = ["DmitryAstafyev <dvastafyev@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "0.8.1", features = ["v4"] }
tokio = { version = "1.5.0", features = ["full"] }
futures = { version = "0.3.14" }
log = "0.4.14"
log4rs = "1.0.0"
async-trait = "0.1.51"