[package]
authors = ["DmitryAstafyev <dvastafyev@gmail.com>"]
edition = "2018"
name = "fiber_producer_rs"
version = "0.1.0"
[dependencies]
fiber = { path = "../../../lib/rust" }
fiber_transport_server = { path = "../../transport/server/rust" }
fiber_protocol_rs = { path = "../../../protocol/implementations/rust" }
uuid = { version = "0.8.1", features = ["v4"] }
bytes = "*"
lazy_static = "*"
regex = "1"
async-std = { version = "1.6", features = ["attributes"] }
async-channel = "1.6.1"
futures = { version = "0.3.14" }