[dependencies]
bytes = '1.1.0'
log = '0.4.14'
regex = '1'
thiserror = '1.0.26'
tokio-util = '0.6.7'

[dependencies.clibri]
path = '../../../lib/rust'

[dependencies.clibri_transport_server]
path = '../../../environment/transport/server/rust'

[dependencies.futures]
version = '0.3.14'

[dependencies.tokio]
features = ['full']
version = '1.5.0'

[dependencies.uuid]
features = ['v4']
version = '0.8.1'

[package]
authors = ['DmitryAstafyev <D.Astafyev@outlook.com>']
edition = '2018'
name = 'clibri_producer_rs'
version = '0.1.0'
