[package]
authors = ["DmitryAstafyev <dvastafyev@gmail.com>"]
edition = "2018"
name = "fiber_client_rs"
version = "0.1.0"
[dependencies]
fiber = { path = "../../../lib/rust" }
fiber_transport_client = { path = "../../../environment/transport/client/rust" }
uuid = { version = "0.8.1", features = ["v4"] }
bytes = "*"
regex = "1"
tokio = { version = "1.5.0", features = ["full"] }
futures = { version = "0.3.14" }
thiserror = "1.0.26"
log = "0.4.14"
tokio-util = "0.6.7"
