[package]
authors = ["DmitryAstafyev <dvastafyev@gmail.com>"]
edition = "2018"
name = "fiber_producer_rs"
version = "0.1.0"
[dependencies]
fiber = { path = "../../../lib/rust" }
fiber_transport_server = { path = "../../../environment/transport/server/rust" }
fiber_protocol_rs = { path = "../../../protocol/implementations/rust" }
uuid = { version = "0.8.1", features = ["v4"] }
bytes = "*"
regex = "1"
tokio = { version = "1.5.0", features = ["full"] }
futures = { version = "0.3.14" }
log = "0.4.14"
log4rs = "1.0.0"
lazy_static = "*"
