[package]
name = "fiber_transport_server"
version = "0.1.0"
authors = ["DmitryAstafyev <dvastafyev@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fiber_protocol_rs = { path = "../../../protocol/implementations/rust" }
log = "0.4.8"
log4rs = "0.11.0"
bytes = "0.5.5"
uuid = { version = "0.8.1", features = ["v4"] }
tungstenite = "0.11.0"