[package]
name = "server-test"
version = "0.1.0"
authors = ["DmitryAstafyev <D.Astafyev@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clibri = { path = "../../../../lib/rust" }
clibri_transport_server = { path = "../rust" }
clibri_transport_client = { path = "../../client/rust" }
bytes = "1.0.1"
indicatif = "0.16.2"
console = "0.14.1"
uuid = { version = "0.8.2", features = ["v4"] }
tokio = { version = "1.9.0", features = ["full"] }
tokio-tungstenite = "0.15.0"
futures = { version = "0.3.16" }
log = "0.4.14"
log4rs = "1.0.0"
tokio-util = "0.6.7"
