[package]
name = "fiber_transport_server"
version = "0.1.0"
authors = ["DmitryAstafyev <dvastafyev@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fiber = { path = "../../../../lib/rust" }
bytes = "*"
uuid = { version = "0.8.1", features = ["v4"] }
lazy_static = "*"
async-tungstenite = "0.13.1"
async-std = { version = "1.6", features = ["attributes"] }
async-channel = "1.6.1"
futures = { version = "0.3.14" }

