[package]
name = "fiber_transport_server"
version = "0.1.0"
authors = ["DmitryAstafyev <dvastafyev@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fiber = { path = "../../../../lib/rust" }
bytes = "1.0.1"
uuid = { version = "0.8.2", features = ["v4"] }
tokio = { version = "1.9.0", features = ["full"] }
tokio-tungstenite = "0.15.0"
futures = { version = "0.3.16" }
thiserror = "1.0.26"
log = "0.4.14"
log4rs = "1.0.0"
tokio-util = "0.6.7"