[dependencies]
bytes = '1.1.0'
chrono = '0.4.19'
clibri = '0.1.6'
clibri_transport_client = { path = '../../../../environment/transport/client/rust/' }
console = '0.15.0'
log = '0.4.14'
regex = '1'
thiserror = '1.0.30'
tokio-util = '0.6.9'

[dependencies.futures]
version = '0.3.14'

[dependencies.tokio]
features = ['full']
version = '1.14.0'

[dependencies.uuid]
features = ['v4']
version = '0.8.2'

[package]
authors = ['DmitryAstafyev <D.Astafyev@outlook.com>']
edition = '2018'
name = 'clibri_client_rs'
version = '0.1.0'
